2005/11/22
.bug fix for term binding
.add test for minimum adl
.set dependency to kernel-1.2.4

2006/03/26
.dependency to the latest kernel-1.2.5-SNAPSHOT
.updated archetype description
.updated archetype ontology 

2006/03/29
.added support for assumed values

2006/04/08
.adjusted object path syntax
.updated some unit tests
.added support for C_QUANTITY
.removed C_COUNT syntax
.added a directory based parsing for convenient testing 

2006/05/15
.added packaing jar with dependencies and command line jar invocation

2006/05/25
.added initial support of unicode (UTF-8 encoding) in the parser

2006/07/04
.updated C_DV_QUANTITY and removed unnecessary TerminologyUtil
.added c_dv_ordinal connected to newly added CDvQuantity in the RM

2006/07/11
.added support for adl_version and controlled

2006/07/11
.bug fix for c_dv_quantity
.quick fix for other_contributors in arch_desc
.added assumed_value for c_coded_text

2006/07/11
.added point interval support

2006/07/11
.fixed "T" in the iso datetime pattern