@@ -15,7 +15,6 @@ package se.acode.openehr.parser;
 
 import org.openehr.am.archetype.Archetype;
 import org.openehr.am.archetype.ontology.DefinitionItem;
-import org.openehr.am.archetype.output.ADLOutputter;
 
 import java.io.File;
 import java.io.StringWriter;
