@@ -25,8 +25,8 @@ import org.openehr.am.archetype.constraintmodel.*;
 import org.openehr.am.archetype.constraintmodel.primitive.*;
 import org.openehr.am.archetype.constraintmodel.domain.CCodedText;
 import org.openehr.am.archetype.constraintmodel.domain.CCount;
-import org.openehr.am.archetype.description.ArchetypeDescription;
-import org.openehr.am.archetype.description.ArchetypeDescriptionItem;
+import org.openehr.rm.common.resource.ArchetypeDescription;
+import org.openehr.rm.common.resource.ArchetypeDescriptionItem;
 import org.openehr.am.openehrprofile.datatypes.quantity.CDvOrdinal;
 import org.openehr.am.openehrprofile.datatypes.quantity.Ordinal;
 import org.openehr.am.openehrprofile.datatypes.quantity.CDvQuantity;
